complex v0.0.2 (Release data: 2022-11-30)

Changes:
* Added pseudo- (or "complex") variance, covariance and correlation, cvar, ccov and ccor functions respectively.
* Implemented complex (pseudo) ACF via cacf() and partial CACF via pcacf().
* clm() - complex linear model for complex regression models.
* complex2mat() and complex2vec() functions for switching between complex variables and matrices/vectors.
* mat2complex() and vec2complex() functions to reverse what the previous two do.
* vcov(), confint() and summary() for clm class.
* covar() function to produce covariance matrix from a random complex variable.
* summary.clm() now has an option to produce real-valued parameters via complex=FALSE.
* predict.clm() with proper prediction and confidence intervals and plot.predict.clm().
* Likelihood estimation in clm().
* direct/conjugate moments in cvar() et al.
* cplot() to produce scatterplots of complex variables.
* cplot() with which=2, which now produces scatterplot for variables based on MDS.
* ccor() now also does MDS if needed.


complex v0.0.1 (Release data: 2019-07-01)
==============

This is the initial release of the package. At the moment, we only have CAR function.