@@ -1,7 +1,7 @@
 Package: complex
 Type: Package
 Title: Time Series Analysis and Forecasting Using Complex Variables
-Version: 0.0.2.41011
+Version: 0.0.2.41012
 Date: 2022-11-30
 Authors@R: person("Ivan", "Svetunkov", email = "ivan@svetunkov.ru", role = c("aut", "cre"),
                   comment="Lecturer at Centre for Marketing Analytics and Forecasting, Lancaster University, UK")
