@@ -59,6 +59,7 @@ importFrom(stats,cmdscale)
 importFrom(stats,coef)
 importFrom(stats,confint)
 importFrom(stats,cor)
+importFrom(stats,cov)
 importFrom(stats,deltat)
 importFrom(stats,dist)
 importFrom(stats,fitted)
@@ -68,6 +69,7 @@ importFrom(stats,logLik)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,nobs)
+importFrom(stats,pacf)
 importFrom(stats,qt)
 importFrom(stats,resid)
 importFrom(stats,residuals)
