@@ -26,9 +26,11 @@
 #'
 #' @param x vector of complex variables.
 #' @param lag.max maximum number of lags. See \link[stats]{acf} for more details.
-#' @param kind type of measure to calculate. \code{"conjugate"} means that it is based
+#' @param method method to use in the calculation of the measure. \code{"conjugate"} means that it is based
 #' on the multiplication by conjugate number. \code{"direct"} means the calculation
-#' without the conjugate (i.e. "pseudo" moment).
+#' without the conjugate (i.e. "pseudo" moment). \code{method}
+#' can also be "pearson", "kendall", or "spearman", defining what correlation coefficient
+#' to use after the MDS transformation of complex variables \code{x} and \code{y}.
 #' @param type character string giving the type of CACF to be computed. Allowed values
 #' are "correlation" (the default) and "covariance". Will be partially matched.
 #' @param plot logical. If \code{TRUE} (the default) the CACF is plotted on complex plane
@@ -38,7 +40,7 @@
 #' \itemize{
 #' \item \code{lag} A three dimensional array containing the lags at which the CACF is estimated.
 #' \item \code{acf} An array with the same dimensions as lag containing the estimated CACF.
-#' \item \code{kind} The kind of moment used in calculation (same as the kind argument).
+#' \item \code{method} The method used in calculation (same as the method argument).
 #' \item \code{type} The type of correlation (same as the type argument).
 #' \item \code{n.used} The number of observations in the time series.
 #' \item \code{series} The name of the series x.
@@ -55,18 +57,19 @@
 #' cacf(x)
 #'
 #' @rdname CACF
+#' @importFrom stats cov
 #' @importFrom greybox xregExpander
 #' @export
-cacf <- function(x, lag.max=NULL, kind=c("direct","conjugate"),
+cacf <- function(x, lag.max=NULL, method=c("direct","conjugate","pearson","kendall", "spearman"),
                  type=c("correlation","covariance","partial"),
                  plot=TRUE){
     # Function is based on acf() from stats
 
-    kind <- match.arg(kind);
+    method <- match.arg(method);
     type <- match.arg(type);
 
     if(type=="partial"){
-        return(pcacf(x=x, lag.max=lag.max, plot=plot, kind=kind));
+        return(pcacf(x=x, lag.max=lag.max, plot=plot, method=method));
     }
 
     series <- deparse1(substitute(x))
@@ -81,16 +84,27 @@ cacf <- function(x, lag.max=NULL, kind=c("direct","conjugate"),
         stop("'lag.max' must be at least 1");
     }
 
-    xLagged <- xregExpander(x, lags=c(-1:-lag.max), gaps="NAs");
-    xACF <- vector("complex", lag.max);
-
-    for(i in 1:lag.max){
-        xACF[i] <- switch(type,
-                          "covariance"=ccov(xLagged[,1], xLagged[,i+1], kind=kind, na.rm=TRUE),
-                          "correlation"=ccor(xLagged[,1], xLagged[,i+1], kind=kind, na.rm=TRUE));
+    if(any(method==c("direct","conjugate"))){
+        xACF <- vector("complex", lag.max);
+        xLagged <- xregExpander(x, lags=c(-1:-lag.max), gaps="NAs");
+        for(i in 1:lag.max){
+            xACF[i] <- switch(type,
+                              "covariance"=ccov(xLagged[,1], xLagged[,i+1], method=method, na.rm=TRUE),
+                              "correlation"=ccor(xLagged[,1], xLagged[,i+1], method=method, na.rm=TRUE));
+        }
+    }
+    else{
+        xACF <- vector("numeric", lag.max);
+        xScaled <- cmdscale(dist(complex2vec(x)), k=1)
+        xLagged <- xregExpander(xScaled, lags=c(-1:-lag.max), gaps="NAs");
+        for(i in 1:lag.max){
+            xACF[i] <- switch(type,
+                              "covariance"=cov(xLagged[,1], xLagged[,i+1], method=method, use="complete.obs"),
+                              "correlation"=cor(xLagged[,1], xLagged[,i+1], method=method, use="complete.obs"));
+        }
     }
 
-    acf.out <- structure(list(acf=xACF, kind=kind, type=type, n.used=obs,
+    acf.out <- structure(list(acf=xACF, method=method, type=type, n.used=obs,
                               lag=c(1:lag.max), series=series), class="cacf");
 
     if(plot){
@@ -103,12 +117,13 @@ cacf <- function(x, lag.max=NULL, kind=c("direct","conjugate"),
 }
 
 #' @rdname CACF
+#' @importFrom stats pacf
 #' @export
-pcacf <- function(x, lag.max=NULL, kind=c("direct","conjugate"),
+pcacf <- function(x, lag.max=NULL, method=c("direct","conjugate","pearson","kendall", "spearman"),
                   plot=TRUE){
     # Function is based on acf() from stats
 
-    kind <- match.arg(kind);
+    method <- match.arg(method);
     series <- deparse1(substitute(x))
 
     obs <- length(x);
@@ -129,22 +144,25 @@ pcacf <- function(x, lag.max=NULL, kind=c("direct","conjugate"),
     i <- 1
 
     # Extract estimated parameters of the complex regression
-    if(kind=="direct"){
+    if(method=="direct"){
         for(i in 1:lag.max){
             xPACF[i] <- (invert(t(xLagged[-c(1:i),1:(i+1),drop=FALSE]) %*% xLagged[-c(1:i),1:(i+1),drop=FALSE]) %*%
                              t(xLagged[-c(1:i),1:(i+1),drop=FALSE]) %*%
                              x[-c(1:i)])[i+1,];
         }
     }
-    else{
+    else if(method=="conjugate"){
         for(i in 1:lag.max){
             xPACF[i] <- (invert(t(Conj(xLagged[-c(1:i),1:(i+1),drop=FALSE])) %*% xLagged[-c(1:i),1:(i+1),drop=FALSE]) %*%
                              t(Conj(xLagged[-c(1:i),1:(i+1),drop=FALSE])) %*%
                              x[-c(1:i)])[i+1,];
         }
     }
+    else{
+        xPACF <- pacf(cmdscale(dist(complex2vec(x)), k=1), lag.max=lag.max, plot=FALSE)$acf;
+    }
 
-    acf.out <- structure(list(acf=xPACF, kind=kind, type="partial", n.used=obs,
+    acf.out <- structure(list(acf=xPACF, method=method, type="partial", n.used=obs,
                               lag=c(1:lag.max), series=series), class="cacf");
 
     if(plot){
@@ -174,55 +192,88 @@ print.cacf <- function(x, ...){
 #' @rdname CACF
 #' @export
 plot.cacf <- function(x, which=c(1,2), ask=length(which)>1, ...){
-    mainLabel <- switch(x$type,
-                        "covariance"="Complex autocovariance function",
-                        "correlation"="Complex autocorrelation function",
-                        "partial"="Partial complex autocorrelation function");
+    ellipsis <- list(...);
 
-    # Define, whether to wait for the hit of "Enter"
-    if(ask){
-        devAskNewPage(TRUE);
-        on.exit(devAskNewPage(FALSE));
+    if(x$method=="direct" || (x$method=="conjugate" && any(x$type==c("covariance","partial")))){
+        if(is.null(ellipsis$main)){
+            ellipsis$main <- switch(x$type,
+                                    "covariance"="Complex autocovariance function",
+                                    "correlation"="Complex autocorrelation function",
+                                    "partial"="Partial complex autocorrelation function");
+        }
+        mainLabel <- ellipsis$main;
+        # Define, whether to wait for the hit of "Enter"
+        if(ask){
+            devAskNewPage(TRUE);
+            on.exit(devAskNewPage(FALSE));
+        }
+        for(i in which){
+            if(i==1){
+                parDefault <- par(no.readonly=TRUE);
+                on.exit(par(parDefault),add=TRUE);
+
+                layout(matrix(c(1,2,1,3),2,2))
+                par(mar=c(4,4,4,2))
+                plot(x$acf, type="l",
+                     xlab="Real CACF", ylab="Imaginary CACF", main=mainLabel);
+                points(x$acf);
+                text(Re(x$acf), Im(x$acf), c(1:length(x$acf)), pos=3);
+
+                par(mar=c(4,4,1,2))
+                plot(Re(x$acf), type="h", xlab="Lag", ylab="Real CACF",
+                     ylim=c(min(Re(x$acf),-1),max(Re(x$acf),1)));
+                abline(h=0);
+
+                plot(Im(x$acf), type="h", xlab="Lag", ylab="Imaginary CACF",
+                     ylim=c(min(Im(x$acf),-1),max(Im(x$acf),1)));
+                abline(h=0);
+            }
+            if(i==2){
+                parDefault <- par(no.readonly=TRUE);
+                on.exit(par(parDefault),add=TRUE);
+
+                layout(matrix(c(1,2,1,3),2,2))
+                par(mar=c(4,4,4,2))
+                plot(abs(x$acf), Arg(x$acf), type="l",
+                     xlab="Absolute of CACF", ylab="Argument of CACF", main=mainLabel);
+                points(abs(x$acf), Arg(x$acf));
+                text(abs(x$acf), Arg(x$acf), c(1:length(x$acf)), pos=3);
+
+                par(mar=c(4,4,1,2))
+                plot(abs(x$acf), type="h", xlab="Lag", ylab="Absolute of CACF");
+                abline(h=0);
+
+                plot(Arg(x$acf), type="h", xlab="Lag", ylab="Argument of CACF");
+                abline(h=0);
+            }
+        }
     }
-
-    for(i in which){
-        if(i==1){
-            parDefault <- par(no.readonly=TRUE);
-            on.exit(par(parDefault),add=TRUE);
-
-            layout(matrix(c(1,2,1,3),2,2))
-            par(mar=c(4,4,4,2))
-            plot(x$acf, type="l",
-                 xlab="Real CACF", ylab="Imaginary CACF", main=mainLabel);
-            points(x$acf);
-            text(Re(x$acf), Im(x$acf), c(1:length(x$acf)), pos=3);
-
-            par(mar=c(4,4,1,2))
-            plot(Re(x$acf), type="h", xlab="Lag", ylab="Real CACF",
-                 ylim=c(min(Re(x$acf),-1),max(Re(x$acf),1)));
-            abline(h=0);
-
-            plot(Im(x$acf), type="h", xlab="Lag", ylab="Imaginary CACF",
-                 ylim=c(min(Im(x$acf),-1),max(Im(x$acf),1)));
-            abline(h=0);
+    else{
+        if(is.null(ellipsis$main)){
+            ellipsis$main <- switch(x$type,
+                                    "covariance"="Autocovariance of MDS of a complex variable",
+                                    "correlation"="Autocorrelation of MDS of a complex variable",
+                                    "partial"="Partial autocorrelation of MDS of a complex variable");
         }
-        if(i==2){
-            parDefault <- par(no.readonly=TRUE);
-            on.exit(par(parDefault),add=TRUE);
-
-            layout(matrix(c(1,2,1,3),2,2))
-            par(mar=c(4,4,4,2))
-            plot(abs(x$acf), Arg(x$acf), type="l",
-                 xlab="Absolute of CACF", ylab="Argument of CACF", main=mainLabel);
-            points(abs(x$acf), Arg(x$acf));
-            text(abs(x$acf), Arg(x$acf), c(1:length(x$acf)), pos=3);
-
-            par(mar=c(4,4,1,2))
-            plot(abs(x$acf), type="h", xlab="Lag", ylab="Absolute of CACF");
-            abline(h=0);
-
-            plot(Arg(x$acf), type="h", xlab="Lag", ylab="Argument of CACF");
-            abline(h=0);
+        if(is.null(ellipsis$ylab)){
+            ellipsis$ylab <- switch(x$type,
+                                    "covariance"="Autocovariance",
+                                    "correlation"="ACF",
+                                    "partial"="PACF");
         }
+        if(is.null(ellipsis$xlab)){
+            ellipsis$xlab <- "Lag";
+        }
+        if(is.null(ellipsis$type)){
+            ellipsis$type <- "h";
+        }
+        if(is.null(ellipsis$ylim)){
+            ellipsis$ylim <- c(min(x$acf,-1),max(x$acf,1));
+        }
+        ellipsis$x <- x$acf;
+
+        do.call("plot", ellipsis);
+
+        abline(h=0);
     }
 }
