@@ -15,6 +15,7 @@ Changes:
 * cplot() to produce scatterplots of complex variables.
 * cplot() with which=2, which now produces scatterplot for variables based on MDS.
 * ccor() now also does MDS if needed.
+* cacf() with MDS and Pearson's correlation.
 
 
 complex v0.0.1 (Release data: 2019-07-01)
